--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/Level_1.Level_1
+EditorStartupMap=/Game/Levels/Level_1.Level_1
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
